--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Devotional"></activity>
+        <activity android:name=".Emergency"></activity>
+        <activity android:name=".Bus" />
+        <activity android:name=".Train" />
+        <activity android:name=".History" />
+        <activity android:name=".Devo_info" />
+        <activity android:name=".Devotional" />
         <activity android:name=".Dashboard" />
         <activity android:name=".MainActivity">
             <intent-filter>
