--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tourism"></activity>
+        <activity android:name=".Link"></activity>
+        <activity android:name=".Tourism" />
         <activity android:name=".Emergency" />
         <activity android:name=".Bus" />
         <activity android:name=".Train" />
