--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Link"></activity>
+        <activity android:name=".SocialMedia"></activity>
+        <activity android:name=".Talent" />
+        <activity android:name=".Link" />
         <activity android:name=".Tourism" />
         <activity android:name=".Emergency" />
         <activity android:name=".Bus" />
