--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,20 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\AM6\\Desktop\\keystore.jks')
+            storePassword 'solapur0217'
+            keyAlias 'upload'
+            keyPassword 'solapur0217'
+        }
+        release {
+            storeFile file('C:\\Users\\AM6\\Desktop\\keystore.jks')
+            storePassword 'solapur0217'
+            keyAlias 'upload'
+            keyPassword 'solapur0217'
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
@@ -16,8 +30,13 @@ android {
     }
 
     buildTypes {
+        debug{
+            signingConfig signingConfigs.debug
+        }
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.release
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
