--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ apply plugin: 'com.google.gms.google-services'
 android {
     signingConfigs {
         debug {
-            storeFile file('C:\\Users\\AM6\\Desktop\\keystore.jks')
+            storeFile file('C:\\Users\\AM6\\Desktop\\keystore_mh13.jks')
             storePassword 'solapur0217'
-            keyAlias 'upload'
+            keyAlias 'key0'
             keyPassword 'solapur0217'
         }
         release {
-            storeFile file('C:\\Users\\AM6\\Desktop\\keystore.jks')
+            storeFile file('C:\\Users\\AM6\\Desktop\\keystore_mh13.jks')
             storePassword 'solapur0217'
-            keyAlias 'upload'
+            keyAlias 'key0'
             keyPassword 'solapur0217'
         }
     }
@@ -23,8 +23,8 @@ android {
         applicationId "com.pravingaikwad.solapurcityguide"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -46,7 +46,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
