--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,11 @@ android {
 
     buildTypes {
         debug{
+            debuggable true
             signingConfig signingConfigs.debug
         }
         release {
+            debuggable false
             signingConfig signingConfigs.release
             minifyEnabled true
             shrinkResources true
